// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createPayload should create a payload - alice key 1`] = `
{
  "Content": {
    "data": [
      99,
      111,
      110,
      116,
      101,
      110,
      116,
    ],
    "type": "Buffer",
  },
  "Headers": {
    "ContentEncoding": "base64/plain",
    "ContentEncryption": "nacl-secret-key",
    "ContentLength": 7,
    "ContentSignature": Uint8Array [
      170,
      222,
      217,
      108,
      230,
      127,
      31,
      43,
      143,
      207,
      132,
      133,
      102,
      247,
      30,
      16,
      219,
      109,
      244,
      166,
      131,
      75,
      135,
      159,
      226,
      228,
      79,
      115,
      6,
      207,
      195,
      173,
      144,
      150,
      106,
      188,
      120,
      246,
      75,
      68,
      40,
      81,
      198,
      111,
      3,
      9,
      111,
      112,
      59,
      95,
      29,
      231,
      42,
      234,
      142,
      169,
      117,
      48,
      248,
      247,
      179,
      136,
      2,
      10,
    ],
    "ContentType": "application/vnd.mailchain.verified-credential-request",
    "Created": 2022-06-06T00:00:00.000Z,
    "Origin": ED25519PublicKey {
      "bytes": Uint8Array [
        114,
        60,
        170,
        35,
        165,
        181,
        17,
        175,
        90,
        215,
        183,
        239,
        96,
        118,
        228,
        20,
        171,
        126,
        117,
        169,
        220,
        145,
        14,
        166,
        14,
        65,
        122,
        43,
        119,
        10,
        86,
        113,
      ],
      "curve": "ed25519",
    },
    "PluginHeaders": {
      "plugin": {
        "value": "value",
      },
    },
  },
}
`;

exports[`createPayload should create a payload - bob key 1`] = `
{
  "Content": {
    "data": [
      99,
      111,
      110,
      116,
      101,
      110,
      116,
    ],
    "type": "Buffer",
  },
  "Headers": {
    "ContentEncoding": "base64/plain",
    "ContentEncryption": "nacl-secret-key",
    "ContentLength": 7,
    "ContentSignature": Uint8Array [
      162,
      180,
      3,
      119,
      144,
      21,
      189,
      245,
      208,
      155,
      140,
      87,
      185,
      191,
      149,
      46,
      47,
      111,
      159,
      238,
      112,
      56,
      3,
      27,
      53,
      187,
      252,
      204,
      127,
      18,
      108,
      171,
      91,
      167,
      162,
      73,
      99,
      185,
      178,
      213,
      12,
      153,
      149,
      187,
      219,
      169,
      150,
      150,
      150,
      242,
      175,
      54,
      233,
      207,
      169,
      18,
      34,
      39,
      220,
      79,
      97,
      147,
      134,
      2,
    ],
    "ContentType": "application/vnd.mailchain.verified-credential-request",
    "Created": 2022-06-06T00:00:00.000Z,
    "Origin": ED25519PublicKey {
      "bytes": Uint8Array [
        46,
        50,
        47,
        135,
        64,
        198,
        1,
        114,
        17,
        26,
        200,
        234,
        220,
        221,
        162,
        81,
        47,
        144,
        208,
        109,
        14,
        80,
        62,
        241,
        137,
        151,
        154,
        21,
        155,
        236,
        225,
        232,
      ],
      "curve": "ed25519",
    },
    "PluginHeaders": {
      "plugin": {
        "value": "value",
      },
    },
  },
}
`;
